--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <h1 class="logo">TimmsyArt</h1>
             <nav class="nav">
                 <a href="#gallery" class="nav-link">Gallery</a>
+                <a href="batman.html" class="nav-link">Batman vs Joker</a>
+                <a href="rolling-stones.html" class="nav-link">Rolling Stones</a>
+                <a href="the-who.html" class="nav-link">The Who</a>
                 <a href="#about" class="nav-link">About</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </nav>
@@ -30,136 +33,45 @@
         <section id="gallery" class="gallery">
             <div class="container">
                 <h2 class="section-title">Art Gallery</h2>
-                <div class="art-grid">
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/OIP.jpg" alt="Contemporary Art Piece 1" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
+                <div class="collection-grid">
+                    <a href="batman.html" class="collection-item">
+                        <div class="collection-image-container">
+                            <img src="./Art_Examples/OIP.jpg" alt="Batman vs The Joker Collection" class="collection-image">
+                            <div class="collection-overlay">
+                                <span class="collection-link-text">View Collection</span>
                             </div>
                         </div>
-                        <div class="art-info">
-                            <h3 class="art-title">Contemporary Abstract 1</h3>
-                            <p class="art-medium">Mixed Media</p>
+                        <div class="collection-info">
+                            <h3 class="collection-title">Batman vs The Joker</h3>
+                            <p class="collection-description">The eternal battle between hero and villain</p>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/OIP2.jpg" alt="Contemporary Art Piece 2" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
+                    <a href="rolling-stones.html" class="collection-item">
+                        <div class="collection-image-container">
+                            <img src="./Art_Examples/The Rolling Stones 1.jpg" alt="The Rolling Stones Collection" class="collection-image">
+                            <div class="collection-overlay">
+                                <span class="collection-link-text">View Collection</span>
                             </div>
                         </div>
-                        <div class="art-info">
-                            <h3 class="art-title">Contemporary Abstract 2</h3>
-                            <p class="art-medium">Mixed Media</p>
+                        <div class="collection-info">
+                            <h3 class="collection-title">The Rolling Stones</h3>
+                            <p class="collection-description">Capturing the essence of rock and roll legends</p>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/OIP3.jpg" alt="Contemporary Art Piece 3" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
+                    <a href="the-who.html" class="collection-item">
+                        <div class="collection-image-container">
+                            <img src="./Art_Examples/The Who 1.jpg" alt="The Who Collection" class="collection-image">
+                            <div class="collection-overlay">
+                                <span class="collection-link-text">View Collection</span>
                             </div>
                         </div>
-                        <div class="art-info">
-                            <h3 class="art-title">Contemporary Abstract 3</h3>
-                            <p class="art-medium">Mixed Media</p>
+                        <div class="collection-info">
+                            <h3 class="collection-title">The Who</h3>
+                            <p class="collection-description">Celebrating the pioneers of rock opera</p>
                         </div>
-                    </div>
-
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/OIP4.jpg" alt="Contemporary Art Piece 4" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
-                            </div>
-                        </div>
-                        <div class="art-info">
-                            <h3 class="art-title">Contemporary Abstract 4</h3>
-                            <p class="art-medium">Mixed Media</p>
-                        </div>
-                    </div>
-
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/OIP5.jpg" alt="Contemporary Art Piece 5" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
-                            </div>
-                        </div>
-                        <div class="art-info">
-                            <h3 class="art-title">Contemporary Abstract 5</h3>
-                            <p class="art-medium">Mixed Media</p>
-                        </div>
-                    </div>
-
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/The Rolling Stones 1.jpg" alt="The Rolling Stones Artwork 1" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
-                            </div>
-                        </div>
-                        <div class="art-info">
-                            <h3 class="art-title">The Rolling Stones - Classic</h3>
-                            <p class="art-medium">Digital Art</p>
-                        </div>
-                    </div>
-
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/The Rolling Stones 2.jpg" alt="The Rolling Stones Artwork 2" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
-                            </div>
-                        </div>
-                        <div class="art-info">
-                            <h3 class="art-title">The Rolling Stones - Vintage</h3>
-                            <p class="art-medium">Digital Art</p>
-                        </div>
-                    </div>
-
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/The Rolling Stones 3.jpg" alt="The Rolling Stones Artwork 3" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
-                            </div>
-                        </div>
-                        <div class="art-info">
-                            <h3 class="art-title">The Rolling Stones - Modern</h3>
-                            <p class="art-medium">Digital Art</p>
-                        </div>
-                    </div>
-
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/The Who 1.jpg" alt="The Who Artwork 1" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
-                            </div>
-                        </div>
-                        <div class="art-info">
-                            <h3 class="art-title">The Who - Iconic</h3>
-                            <p class="art-medium">Digital Art</p>
-                        </div>
-                    </div>
-
-                    <div class="art-item">
-                        <div class="art-image-container">
-                            <img src="Art_Examples/The Who 2.jpg" alt="The Who Artwork 2" class="art-image">
-                            <div class="art-overlay">
-                                <button class="view-btn">View Details</button>
-                            </div>
-                        </div>
-                        <div class="art-info">
-                            <h3 class="art-title">The Who - Legendary</h3>
-                            <p class="art-medium">Digital Art</p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -168,8 +80,8 @@
             <div class="container">
                 <h2 class="section-title">About the Artist</h2>
                 <div class="about-content">
-                    <p>Welcome to TimmsyArt, a collection of contemporary artworks that blend traditional techniques with modern digital innovation. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
-                    <p>Our collection features a diverse range of styles, from abstract contemporary pieces to iconic music-inspired artwork, all created with passion and attention to detail.</p>
+                    <p>Welcome to TimmsyArt, a collection of contemporary artworks that a number of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
+                    <p>The collection features a diverse range of styles, from abstract contemporary pieces to iconic music-inspired artwork, all created with passion and attention to detail.</p>
                 </div>
             </div>
         </section>
@@ -178,7 +90,7 @@
             <div class="container">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact-content">
-                    <p>For inquiries about artwork, commissions, or general questions, please reach out to us.</p>
+                    <p>For inquiries about artwork or general questions, please reach out to us.</p>
                     <div class="contact-info">
                         <p>Email: PabloTimms01@outlook.com</p>
                         <p>Follow us on social media for updates on new pieces and exhibitions.</p>
@@ -190,7 +102,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 TimmsyArt. All rights reserved.</p>
+            <p>&copy; 2024 LD Gallery / TimmsyArt. All rights reserved.</p>
         </div>
     </footer>
 
