--- a/batman.html
+++ b/batman.html
@@ -37,7 +37,7 @@
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="./Art_Examples/OIP.jpg" alt="Batman Classic" class="gallery-image">
+                            <img src="Art_Examples/OIP.jpg" alt="Batman Classic" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
@@ -50,7 +50,7 @@
 
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="./Art_Examples/OIP2.jpg" alt="The Batman Janus" class="gallery-image">
+                            <img src="Art_Examples/OIP2.jpg" alt="The Batman Janus" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
@@ -63,7 +63,7 @@
 
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="./Art_Examples/OIP3.jpg" alt="Heath Ledger's Joker" class="gallery-image">
+                            <img src="Art_Examples/OIP3.jpg" alt="Heath Ledger's Joker" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
@@ -76,7 +76,7 @@
 
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="./Art_Examples/OIP4.jpg" alt="Rivalry" class="gallery-image">
+                            <img src="Art_Examples/OIP4.jpg" alt="Rivalry" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
@@ -89,7 +89,7 @@
 
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="./Art_Examples/OIP5.jpg" alt="Ebuliant Joker" class="gallery-image">
+                            <img src="Art_Examples/OIP5.jpg" alt="Ebuliant Joker" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
