--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="collection-grid">
                     <a href="batman.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="./Art_Examples/OIP.jpg" alt="Batman vs The Joker Collection" class="collection-image">
+                            <img src="Art_Examples/OIP.jpg" alt="Batman vs The Joker Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
@@ -49,7 +49,7 @@
 
                     <a href="rolling-stones.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="./Art_Examples/The Rolling Stones 1.jpg" alt="The Rolling Stones Collection" class="collection-image">
+                            <img src="Art_Examples/The Rolling Stones 1.jpg" alt="The Rolling Stones Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
@@ -62,7 +62,7 @@
 
                     <a href="the-who.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="./Art_Examples/The Who 1.jpg" alt="The Who Collection" class="collection-image">
+                            <img src="Art_Examples/The Who 1.jpg" alt="The Who Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
