--- a/the-who.html
+++ b/the-who.html
@@ -37,7 +37,7 @@
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="./Art_Examples/The Who 1.jpg" alt="The Who - Iconic" class="gallery-image">
+                            <img src="Art_Examples/The Who 1.jpg" alt="The Who - Iconic" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
@@ -50,7 +50,7 @@
 
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="./Art_Examples/The Who 2.jpg" alt="The Who - Legendary" class="gallery-image">
+                            <img src="Art_Examples/The Who 2.jpg" alt="The Who - Legendary" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
