--- a/rolling-stones.html
+++ b/rolling-stones.html
@@ -37,7 +37,7 @@
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="Art_Examples/The Rolling Stones 1.jpg" alt="The Rolling Stones - Classic" class="gallery-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Rolling Stones 1.jpg" alt="The Rolling Stones - Classic" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
@@ -50,7 +50,7 @@
 
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="Art_Examples/The Rolling Stones 2.jpg" alt="The Rolling Stones - Vintage" class="gallery-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Rolling Stones 2.jpg" alt="The Rolling Stones - Vintage" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
@@ -63,7 +63,7 @@
 
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="Art_Examples/The Rolling Stones 3.jpg" alt="The Rolling Stones - Modern" class="gallery-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Rolling Stones 3.jpg" alt="The Rolling Stones - Modern" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
