Additions for Version 5
upload amendments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TimmsyArt - Art Gallery</title>
+    <title>Timmsy Art - Art Gallery</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -80,7 +80,7 @@
             <div class="container">
                 <h2 class="section-title">About the Artist</h2>
                 <div class="about-content">
-                    <p>Welcome to TimmsyArt, a collection of contemporary artworks that a number of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
+                    <p>Welcome to Timmsy Art, a collection of contemporary artworks that a number of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
                     <p>The collection features a diverse range of styles, from abstract contemporary pieces to iconic music-inspired artwork, all created with passion and attention to detail.</p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="contact-content">
                     <p>For inquiries about artwork or general questions, please reach out to us.</p>
                     <div class="contact-info">
-                        <p>Email: PabloTimms01@outlook.com</p>
+                        <p>Email: PabloTimms@outlook.com</p>
                         <p>Follow us on social media for updates on new pieces and exhibitions.</p>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 LD Gallery / TimmsyArt. All rights reserved.</p>
+            <p>&copy; 2024 LD Gallery / Timmsy Art. All rights reserved.</p>
         </div>
     </footer>
 
