--- a/rolling-stones.html
+++ b/rolling-stones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Rolling Stones - TimmsyArt</title>
+    <title>The Rolling Stones - Timmsy Art</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="gallery-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="logo">TimmsyArt</h1>
+            <h1 class="logo">Timmsy Art</h1>
             <nav class="nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="batman.html" class="nav-link">Batman vs Joker</a>
@@ -44,7 +44,7 @@
                         </div>
                         <div class="gallery-info">
                             <h3 class="gallery-title">The Rolling Stones - Classic</h3>
-                            <p class="gallery-medium">Digital Art</p>
+                            <p class="gallery-medium">Mixed Media</p>
                         </div>
                     </div>
 
@@ -57,7 +57,7 @@
                         </div>
                         <div class="gallery-info">
                             <h3 class="gallery-title">The Rolling Stones - Vintage</h3>
-                            <p class="gallery-medium">Digital Art</p>
+                            <p class="gallery-medium">Mixed Media</p>
                         </div>
                     </div>
 
@@ -70,7 +70,7 @@
                         </div>
                         <div class="gallery-info">
                             <h3 class="gallery-title">The Rolling Stones - Modern</h3>
-                            <p class="gallery-medium">Digital Art</p>
+                            <p class="gallery-medium">Mixed Media</p>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                 <h2 class="section-title">About This Collection</h2>
                 <div class="description-content">
                     <p>This collection pays tribute to The Rolling Stones, one of the most influential rock bands in history. Each artwork captures different eras and styles of the band, from their classic early years to their modern performances.</p>
-                    <p>The digital art pieces blend contemporary techniques with the timeless energy of rock and roll, creating vibrant representations that honor the band's legendary status and enduring appeal across generations.</p>
+                    <p>The Mixed Media pieces blend contemporary techniques with the timeless energy of rock and roll, creating vibrant representations that honor the band's legendary status and enduring appeal across generations.</p>
                 </div>
             </div>
         </section>
