Changes to index V6
amendments required

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="container">
                 <h2 class="section-title">About the Artist</h2>
                 <div class="about-content">
-                    <p>Welcome to Timmsy Art, a collection of contemporary artworks that a number of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
+                    <p>Welcome to Timmsy Art, a collection of contemporary artworks crafted using a range of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
                     <p>The collection features a diverse range of styles, from abstract contemporary pieces to iconic music-inspired artwork, all created with passion and attention to detail.</p>
                 </div>
             </div>
