--- a/rolling-stones.html
+++ b/rolling-stones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Rolling Stones - Timmsy Art</title>
+    <title>The Rolling Stones - Timmsy's Art</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="gallery-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
@@ -147,3 +147,4 @@
     </script>
 </body>
 </html>
+
