--- a/rolling-stones.html
+++ b/rolling-stones.html
@@ -90,7 +90,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 LD Gallery / TimmsyArt. All rights reserved.</p>
+            <p>&copy; 2025 LD Gallery / Timmsy's Art. All rights reserved.</p>
         </div>
     </footer>
 
@@ -147,4 +147,5 @@
     </script>
 </body>
 </html>
+
 
