--- a/rolling-stones.html
+++ b/rolling-stones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Rolling Stones - Timmsy's Art</title>
+    <title>The Rolling Stones - Timmsy Art</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="gallery-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
@@ -90,7 +90,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 LD Gallery / Timmsy's Art. All rights reserved.</p>
+            <p>&copy; 2025 LD Gallery / Timmsy Art. All rights reserved.</p>
         </div>
     </footer>
 
@@ -147,5 +147,6 @@
     </script>
 </body>
 </html>
+
 
 
