--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="main">
         <section class="hero">
             <div class="container">
-                <h2 class="hero-title">Contemporary Art Collection</h2>
+                <h2 class="hero-title">Timmsy's Contemporary Art Collection</h2>
                 <p class="hero-subtitle">Discover unique artworks and creative expressions</p>
             </div>
         </section>
@@ -102,7 +102,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 LD Gallery / Timmsy Art. All rights reserved.</p>
+            <p>&copy; 2025 LD Gallery / Timmsy Art. All rights reserved.</p>
         </div>
     </footer>
 
@@ -129,4 +129,5 @@
         });
     </script>
 </body>
+
 </html>
