--- a/batman.html
+++ b/batman.html
@@ -116,7 +116,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 LD Gallery / Timmsy's Art. All rights reserved.</p>
+            <p>&copy; 2025 LD Gallery / Timmsy Art. All rights reserved.</p>
         </div>
     </footer>
 
@@ -173,5 +173,6 @@
     </script>
 </body>
 </html>
+
 
 
