--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timmsy Art - Art Gallery</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>Timmsy's Art - Art Gallery</title>
+    <link rel="stylesheet" href="styles.css?v=3">
 </head>
 <body>
     <header class="header">
@@ -80,7 +79,7 @@
             <div class="container">
                 <h2 class="section-title">About the Artist</h2>
                 <div class="about-content">
-                    <p>Welcome to Timmsy Art, a collection of contemporary artworks crafted using a range of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
+                    <p>Welcome to Timmsy's Art, a collection of contemporary artworks crafted using a range of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
                     <p>The collection features a diverse range of styles, from abstract contemporary pieces to iconic music-inspired artwork, all created with passion and attention to detail.</p>
                 </div>
             </div>
@@ -102,7 +101,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 LD Gallery / Timmsy Art. All rights reserved.</p>
+            <p>&copy; 2025 LD Gallery / Timmsy's Art. All rights reserved.</p>
         </div>
     </footer>
 
