--- a/the-who.html
+++ b/the-who.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Who - Timmsy Art</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="gallery-styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css?v=3">
+    <link rel="stylesheet" href="gallery-styles.css?v=3">
 </head>
 <body>
     <header class="header">
