Change of appearance
Structure and font updates

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timmsy's Art - Art Gallery</title>
-    <link rel="stylesheet" href="styles.css?v=3">
+    <title>Timmsy Art - Art Gallery</title>
+    <link rel="stylesheet" href="styles.css?v=4">
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
             <h1 class="logo">Timmsy Art</h1>
-            <nav class="nav">
-                <a href="#gallery" class="nav-link">Gallery</a>
-                <a href="batman.html" class="nav-link">Batman vs Joker</a>
-                <a href="rolling-stones.html" class="nav-link">Rolling Stones</a>
-                <a href="the-who.html" class="nav-link">The Who</a>
-                <a href="#about" class="nav-link">About</a>
-                <a href="#contact" class="nav-link">Contact</a>
+            <button class="menu-toggle" id="menuToggle">Menu</button>
+            <nav class="nav" id="mainNav">
+                <div class="nav-item">
+                    <a href="#gallery" class="nav-link">Gallery</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#about" class="nav-link">About the Artist</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#contact" class="nav-link">Contact Me</a>
+                </div>
             </nav>
         </div>
     </header>
@@ -24,7 +28,7 @@
     <main class="main">
         <section class="hero">
             <div class="container">
-                <h2 class="hero-title">Timmsy's Contemporary Art Collection</h2>
+                <h2 class="hero-title">Contemporary Art Collection</h2>
                 <p class="hero-subtitle">Discover unique artworks and creative expressions</p>
             </div>
         </section>
@@ -33,42 +37,68 @@
             <div class="container">
                 <h2 class="section-title">Art Gallery</h2>
                 <div class="collection-grid">
-                    <a href="batman.html" class="collection-item">
+                    <a href="dc-characters.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/OIP.jpg" alt="Batman vs The Joker Collection" class="collection-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/OIP.jpg" alt="DC Characters Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
                         </div>
                         <div class="collection-info">
-                            <h3 class="collection-title">Batman vs The Joker</h3>
-                            <p class="collection-description">The eternal battle between hero and villain</p>
+                            <h3 class="collection-title">DC Characters</h3>
+                            <p class="collection-description">Batman, The Joker, and the heroes and villains of the DC Universe</p>
                         </div>
                     </a>
 
-                    <a href="rolling-stones.html" class="collection-item">
+                    <a href="marvel-characters.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Rolling Stones 1.jpg" alt="The Rolling Stones Collection" class="collection-image">
+                            <img src="https://via.placeholder.com/600x450/169B62/ffffff?text=Marvel+Characters" alt="Marvel Characters Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
                         </div>
                         <div class="collection-info">
-                            <h3 class="collection-title">The Rolling Stones</h3>
-                            <p class="collection-description">Capturing the essence of rock and roll legends</p>
+                            <h3 class="collection-title">Marvel Characters</h3>
+                            <p class="collection-description">Heroes and villains from the Marvel Universe</p>
                         </div>
                     </a>
 
-                    <a href="the-who.html" class="collection-item">
+                    <a href="music-legends.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Who 1.jpg" alt="The Who Collection" class="collection-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Rolling Stones 1.jpg" alt="Music Legends Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
                         </div>
                         <div class="collection-info">
-                            <h3 class="collection-title">The Who</h3>
-                            <p class="collection-description">Celebrating the pioneers of rock opera</p>
+                            <h3 class="collection-title">Music Legends</h3>
+                            <p class="collection-description">Celebrating the icons of rock and roll history</p>
+                        </div>
+                    </a>
+
+                    <a href="recovery-art.html" class="collection-item">
+                        <div class="collection-image-container">
+                            <img src="https://via.placeholder.com/600x450/169B62/ffffff?text=Recovery+Art" alt="Recovery Art Collection" class="collection-image">
+                            <div class="collection-overlay">
+                                <span class="collection-link-text">View Collection</span>
+                            </div>
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">Recovery Art</h3>
+                            <p class="collection-description">Art inspired by hope, healing, and transformation</p>
+                        </div>
+                    </a>
+
+                    <a href="miscellaneous.html" class="collection-item">
+                        <div class="collection-image-container">
+                            <img src="https://via.placeholder.com/600x450/169B62/ffffff?text=Miscellaneous" alt="Miscellaneous Collection" class="collection-image">
+                            <div class="collection-overlay">
+                                <span class="collection-link-text">View Collection</span>
+                            </div>
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">Miscellaneous</h3>
+                            <p class="collection-description">A diverse collection of creative expressions</p>
                         </div>
                     </a>
                 </div>
@@ -79,7 +109,7 @@
             <div class="container">
                 <h2 class="section-title">About the Artist</h2>
                 <div class="about-content">
-                    <p>Welcome to Timmsy's Art, a collection of contemporary artworks crafted using a range of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
+                    <p>Welcome to Timmsy Art, a collection of contemporary artworks crafted using a range of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
                     <p>The collection features a diverse range of styles, from abstract contemporary pieces to iconic music-inspired artwork, all created with passion and attention to detail.</p>
                 </div>
             </div>
@@ -87,11 +117,11 @@
 
         <section id="contact" class="contact">
             <div class="container">
-                <h2 class="section-title">Contact</h2>
+                <h2 class="section-title">Contact Me</h2>
                 <div class="contact-content">
                     <p>For inquiries about artwork or general questions, please reach out to us.</p>
                     <div class="contact-info">
-                        <p>Email: TimmsyNo1@iCloud.com</p>
+                        <p>Email: PabloTimms@outlook.com</p>
                         <p>Follow us on social media for updates on new pieces and exhibitions.</p>
                     </div>
                 </div>
@@ -101,25 +131,16 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 LD Gallery / Timmsy's Art. All rights reserved.</p>
+            <p>&copy; 2024 LD Gallery / Timmsy Art. All rights reserved.</p>
         </div>
     </footer>
 
+    <script src="menu-script.js"></script>
     <script>
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        // Add hover effects for art items
-        document.querySelectorAll('.art-item').forEach(item => {
+        // Add hover effects for collection items
+        document.querySelectorAll('.collection-item').forEach(item => {
             item.addEventListener('mouseenter', function() {
-                this.style.transform = 'translateY(-5px)';
+                this.style.transform = 'translateY(-8px)';
             });
             
             item.addEventListener('mouseleave', function() {
@@ -128,6 +149,4 @@
         });
     </script>
 </body>
-
 </html>
-
