Alterations to notes and headings
Font/menu updates

--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timmsy Art - Art Gallery</title>
+    <title>Timmsy's Art - Art Gallery</title>
     <link rel="stylesheet" href="styles.css?v=4">
 </head>
 <body>
     <header class="header">
         <div class="container header-container">
-            <h1 class="logo">Timmsy Art</h1>
+            <h1 class="logo">Timmsy's Art</h1>
             <button class="menu-toggle" id="menuToggle">Menu</button>
             <nav class="nav" id="mainNav">
-                <div class="nav-item">
-                    <a href="#gallery" class="nav-link">Gallery</a>
+                <div class="nav-item has-submenu">
+                    <a href="#" class="nav-link">Gallery</a>
+                    <div class="submenu">
+                        <a href="dc-characters.html" class="submenu-link">DC Characters</a>
+                        <a href="marvel-characters.html" class="submenu-link">Marvel Characters</a>
+                        <a href="music-legends.html" class="submenu-link">Music Legends</a>
+                        <a href="recovery-art.html" class="submenu-link">Recovery Art</a>
+                        <a href="miscellaneous.html" class="submenu-link">Miscellaneous</a>
+                    </div>
                 </div>
                 <div class="nav-item">
                     <a href="#about" class="nav-link">About the Artist</a>
@@ -109,7 +116,7 @@
             <div class="container">
                 <h2 class="section-title">About the Artist</h2>
                 <div class="about-content">
-                    <p>Welcome to Timmsy Art, a collection of contemporary artworks crafted using a range of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
+                    <p>Welcome to Timmsy's Art, a collection of contemporary artworks crafted using a range of traditional techniques. Each piece is carefully crafted to evoke emotion and inspire creativity.</p>
                     <p>The collection features a diverse range of styles, from abstract contemporary pieces to iconic music-inspired artwork, all created with passion and attention to detail.</p>
                 </div>
             </div>
@@ -131,7 +138,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 LD Gallery / Timmsy Art. All rights reserved.</p>
+            <p>&copy; 2024 LD Gallery / Timmsy's Art. All rights reserved.</p>
         </div>
     </footer>
 
