--- a/recovery-art.html
+++ b/recovery-art.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recovery Art - Timmsy Art</title>
+    <title>Recovery Art - Timmsy's Art</title>
     <link rel="stylesheet" href="styles.css?v=3">
     <link rel="stylesheet" href="gallery-styles.css?v=3">
 </head>
 <body>
     <header class="header">
         <div class="container header-container">
-            <h1 class="logo">Timmsy Art</h1>
+            <h1 class="logo">Timmsy's Art</h1>
             <button class="menu-toggle" id="menuToggle">Menu</button>
             <nav class="nav" id="mainNav">
                 <div class="nav-item">
@@ -67,7 +67,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 LD Gallery / Timmsy Art. All rights reserved.</p>
+            <p>&copy; 2024 LD Gallery / Timmsy's Art. All rights reserved.</p>
         </div>
     </footer>
 
