Changed the contact details
Updated the email address

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="contact-content">
                     <p>For inquiries about artwork or general questions, please reach out to us.</p>
                     <div class="contact-info">
-                        <p>Email: PabloTimms@outlook.com</p>
+                        <p>Email: TimmsyNo1@iCloud.com</p>
                         <p>Follow us on social media for updates on new pieces and exhibitions.</p>
                     </div>
                 </div>
