Font consistencies addressed
Updated font discrepancies

--- a/the-who.html
+++ b/the-who.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Who - Timmsy Art</title>
+    <title>The Who - Timmsy's Art</title>
     <link rel="stylesheet" href="styles.css?v=3">
     <link rel="stylesheet" href="gallery-styles.css?v=3">
 </head>
@@ -76,7 +76,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 LD Gallery / Timmsy Art. All rights reserved.</p>
+            <p>&copy; 2025 LD Gallery / Timmsy's Art. All rights reserved.</p>
         </div>
     </footer>
 
