--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miscellaneous - Timmsy's Art</title>
-    <link rel="stylesheet" href="styles.css?v=3">
-    <link rel="stylesheet" href="gallery-styles.css?v=3">
+    <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css?v=5">
+    <link rel="stylesheet" href="gallery-styles.css?v=5">
 </head>
 <body>
     <header class="header">
