--- a/rolling-stones.html
+++ b/rolling-stones.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Rolling Stones - Timmsy Art</title>
+    <title>The Rolling Stones - Timmsy's Art</title>
     <link rel="stylesheet" href="styles.css?v=3">
     <link rel="stylesheet" href="gallery-styles.css?v=3">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="logo">Timmsy Art</h1>
+            <h1 class="logo">Timmsy's Art</h1>
             <nav class="nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="batman.html" class="nav-link">Batman vs Joker</a>
@@ -89,7 +89,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 LD Gallery / Timmsy Art. All rights reserved.</p>
+            <p>&copy; 2025 LD Gallery / Timmsy's Art. All rights reserved.</p>
         </div>
     </footer>
 
